# fazi

./: Cargo.toml  LICENSE  README.md  build.rs
examples/: custom_main.c  simple_harness.rs
src/: coverage.rs  dictionary.rs  driver.rs  exports.rs  fazi.rs  hooks.rs  ipc.rs  lib.rs  mutations.rs  options.rs  protobuf.rs  sancov.rs  signal.rs  weak.rs  weak_imports.rs
src/mutate/: mod.rs  mutations.rs  mutator.rs
