[package]
name = "fazi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "staticlib", "cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
libc = "0.2"
signal-hook ="0.3"
clap = { version = "3.0", features = ["derive"] }
hex = "0.4"
sha1 = "0.10"
sha2 = "0.10"

[features]
default = ["main_entrypoint"]
main_entrypoint = []