[package]
name = "fazi"
description = "A drop-in replacement for libFuzzer"
version = "0.1.3"
edition = "2021"
author = "Lander Brandt"
readme = "README.md"
keywords = ["fuzzing", "libfuzzer"]
repo = "https://github.com/landaire/fazi"
documentation = "https://docs.rs/fazi"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["rlib", "staticlib", "cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
libc = "0.2"
signal-hook ="0.3"
clap = { version = "3.0", features = ["derive"] }
hex = "0.4"
sha1 = "0.10"
sha2 = "0.10"

[features]
default = ["main_entrypoint", "hook_builtins"]
main_entrypoint = []
hook_memcmp = []
hook_bcmp = []
hook_strncmp = []
hook_strncasecmp = []
hook_strcasecmp = []
hook_strstr = []
hook_strcasestr = []
hook_memem = []
hook_builtins = ["hook_memcmp", "hook_bcmp", "hook_strncmp", "hook_strncasecmp", "hook_strcasecmp", "hook_strstr", "hook_strcasestr", "hook_memem"]

[[example]]
name = "simple_harness"